feat: created the routes, controllers and model for stats-api; modified the swagger and put some examples in the db
