# src/routes/protectedRouter.js
@@ -1,23 +1,14 @@
 const express = require('express');
 const router = express.Router();
-const controller = require('../controllers/roomController');
+const controller = require('../controllers/statsController');
 
-router.route('/rooms')
-    .get(controller.listRooms)
-    .post(controller.createRoom);
-
-router.route('/rooms/search/:codeOrName')
-    .get(controller.getRoomByCodeOrName);
-
-router.route('/rooms/:id')
-    .get(controller.getRoom)
-    .delete(controller.deleteRoom);
-
-router.route('/rooms/:id/players')
-    .post(controller.addPlayer)
-    .put(controller.isReady);
-
-router.route('/rooms/:id/players/:userId')
+router.route('/stats/:userId')
+    .get(controller.getStats)
+    .post(controller.addStat)
+    .put(controller.addResult)
     .delete(controller.removePlayer);
+
+router.route('/stats/history/:userId')
+    .get(controller.getHistory);    
 
 module.exports = router;
